fix(button): calculate corner rounding to support wrapping design
Calculate corner rounding based on the component height, so that the
rounding looks correct when there is wrapping text.

Otherwise, when the button wraps, it has too much rounding as compared
to the design when using the corner-radius-full token.

--- a/components/button/index.css
+++ b/components/button/index.css
@@ -14,15 +14,16 @@ governing permissions and limitations under the License.
 
 .spectrum-Button {
   --spectrum-button-animation-duration: var(--spectrum-animation-duration-100);
-  --spectrum-button-border-radius: var(--spectrum-corner-radius-full);
-  --spectrum-button-border-width: var(--spectrum-border-width-200);
-  
+
   --spectrum-button-focus-ring-gap: var(--spectrum-focus-indicator-gap);
   --spectrum-button-focus-ring-thickness: var(--spectrum-focus-indicator-thickness);
   --spectrum-button-focus-indicator-color: var(--spectrum-focus-indicator-color);
 
   --spectrum-button-min-width: calc(var(--spectrum-component-height-100) * var(--spectrum-button-minimum-width-multiplier));
   --spectrum-button-height: var(--spectrum-component-height-100);
+
+  --spectrum-button-border-radius: calc(var(--spectrum-button-height) / 2);
+  --spectrum-button-border-width: var(--spectrum-border-width-200);
 
   /* @todo set line-height value per size, using font size specific line-height tokens when they are finalized. */
   --spectrum-button-line-height: 1.2;
